--- a/opens.ipynb
+++ b/opens.ipynb
@@ -542,10 +542,10 @@
         "3. Make sure you don't use too many layers. Try not to go beyond 12.\n",
         "4. Make sure your model is trainable in a reasonable time.\n",
         "   An upper bound of 10 to 20 hours is reasonable.\n",
-        "   Anythong beyond two days is unreasonable.\n",
+        "   Anything beyond two days is unreasonable.\n",
         "   This is assuming you are using a decent GPU card\n",
         "   (or a good computing cloud service).\n",
-        "   Otherwise don't try it on your CPU (it can take forever).\n",
+        "   Otherwise don't try it on your CPU (it can take forever!).\n",
         "5. Analyze the cases in which your model makes a false prediction."
       ]
     }
