--- a/opens.ipynb
+++ b/opens.ipynb
@@ -111,9 +111,9 @@
         "\n",
         "## Installing and loading our **kerutils** package.\n",
         "* We recommend using our **kerutils** package for this project\n",
-        "  but expert users are oncouraged to use the **PyTorch** env.\n",
+        "  but motivated expert users are encouraged to also try the **PyTorch** env.\n",
         "* This package can be installed or downloaded from  \n",
-        "https://samyzaf.com/kerutils-1.zip\n"
+        "https://samyzaf.com/kerutils.zip\n"
       ]
     },
     {
@@ -130,7 +130,7 @@
         "id": "Q0n-5lYiL_fk",
         "outputId": "dd5937b6-f64c-4e5e-c1fb-0ce2bbb0f363"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -161,7 +161,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "2A5L9En4VdKU"
       },
@@ -219,7 +219,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -262,7 +262,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -329,7 +329,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "emvlmmliVdKW"
       },
@@ -366,7 +366,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -402,7 +402,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -453,7 +453,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "6bPRjhtNVdKX"
       },
@@ -477,7 +477,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
