--- a/rectrees.ipynb
+++ b/rectrees.ipynb
@@ -113,7 +113,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "id": "e23740f5",
       "metadata": {
         "lines_to_next_cell": 2,
@@ -208,7 +208,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "id": "f69bc319",
       "metadata": {
         "lines_to_next_cell": 2,
@@ -251,8 +251,8 @@
         }
       ],
       "source": [
-        "download(\"https://samyzaf.com/ML/rectrees/train.h5.zip\")\n",
-        "download(\"https://samyzaf.com/ML/rectrees/test.h5.zip\")\n",
+        "download(\"https://samyzaf.com/ML/rectrees/train.h5.zip\", decompress=True)\n",
+        "download(\"https://samyzaf.com/ML/rectrees/test.h5.zip\", decompress=True)\n",
         "X_train, y_train, Y_train, X_test, y_test, Y_test = load_data(\"train.h5\", \"test.h5\")\n",
         "\n",
         "print('X_train shape:', X_train.shape)\n",
@@ -290,7 +290,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "id": "18055c8e",
       "metadata": {
         "id": "18055c8e"
@@ -318,7 +318,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "id": "8ba00f0d",
       "metadata": {
         "colab": {
@@ -361,7 +361,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "id": "93347b33",
       "metadata": {
         "lines_to_next_cell": 2,
@@ -405,7 +405,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "id": "dc4c1fa5",
       "metadata": {
         "lines_to_next_cell": 2,
@@ -494,7 +494,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "id": "14b51b74",
       "metadata": {
         "colab": {
@@ -1144,7 +1144,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "id": "67eac400",
       "metadata": {
         "colab": {
@@ -1168,7 +1168,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "id": "7a8ef0da",
       "metadata": {
         "colab": {
@@ -1219,7 +1219,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "id": "b83ef9af",
       "metadata": {
         "id": "b83ef9af"
@@ -1232,7 +1232,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "id": "71d9c160",
       "metadata": {
         "colab": {
@@ -1272,7 +1272,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "id": "b98fcfe1",
       "metadata": {
         "colab": {
@@ -1308,7 +1308,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "id": "07bac6ab",
       "metadata": {
         "colab": {
@@ -1368,7 +1368,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "id": "62be6241",
       "metadata": {
         "lines_to_next_cell": 2,
@@ -1415,7 +1415,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "id": "51e5a4a3",
       "metadata": {
         "lines_to_next_cell": 2,
@@ -1468,7 +1468,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "id": "1edd659b",
       "metadata": {
         "colab": {
